v0.3.6/_sources/api/hklpy2_solvers/ad_hoc_solver/index.rst.txt
hklpy2_solvers.ad_hoc_solver
============================

.. py:module:: hklpy2_solvers.ad_hoc_solver

.. autoapi-nested-parse::

   Solver wrapping *ad_hoc_diffractometer* for hklpy2.

   Provides the :class:`AdHocSolver` class, which implements the
   :class:`hklpy2.backends.base.SolverBase` interface on top of the
   `ad_hoc_diffractometer <https://github.com/bcda-aps/ad_hoc_diffractometer>`_
   library.  All geometries registered with the library are available.

   .. autosummary::

       ~AdHocSolver



Attributes
----------

.. autoapisummary::

   hklpy2_solvers.ad_hoc_solver.DEFAULT_GEOMETRY
   hklpy2_solvers.ad_hoc_solver.PSEUDO_AXES


Classes
-------

.. autoapisummary::

   hklpy2_solvers.ad_hoc_solver.AdHocSolver


Module Contents
---------------

.. py:class:: AdHocSolver(geometry: str = DEFAULT_GEOMETRY, **kwargs: Any)

   Bases: :py:obj:`hklpy2.backends.base.SolverBase`


   Solver wrapping :mod:`ad_hoc_diffractometer` for hklpy2.

   Wraps :class:`ad_hoc_diffractometer.diffractometer.AdHocDiffractometer` behind
   the :class:`~hklpy2.backends.base.SolverBase` interface so that hklpy2
   can use it for forward / inverse calculations.

   All geometries registered with the ``ad_hoc_diffractometer`` library are
   supported.  Geometry discovery is dynamic: any geometry added to the
   library's registry (including via entry points) is automatically
   available.

   .. seealso:: :func:`ad_hoc_diffractometer.list_geometries`

   PARAMETERS

   geometry : str
       Name of the diffractometer geometry.  Must be one of the names
       returned by :meth:`geometries`.  Default: ``"fourcv"``.
   kwargs
       Passed to the geometry factory function.  For kappa geometries,
       use ``kappa_alpha_deg=...`` to set the kappa tilt angle.


   .. py:property:: UB
      :type: hklpy2.typing.Matrix3x3


      Orientation matrix (3x3).


   .. py:method:: addReflection(reflection: hklpy2.backends.typing.ReflectionDict) -> None

      Add coordinates of a diffraction condition (a reflection).



   .. py:property:: axes_w
      :type: list[str]


      Real axis names computed by :meth:`forward` in the current mode.

      These are the real axes *not* constrained to a fixed motor position
      by the current mode.


   .. py:method:: calculate_UB(r1: hklpy2.backends.typing.ReflectionDict, r2: hklpy2.backends.typing.ReflectionDict) -> hklpy2.typing.Matrix3x3

      Calculate the UB matrix using two reflections (Busing & Levy).

      The ``r1`` and ``r2`` arguments are the contractual source of
      truth: any prior reflections held by the underlying
      ``ad_hoc_diffractometer`` sample are cleared and the two named
      reflections are inserted (so ``setor0`` / ``setor1`` are
      correctly designated) before UB is computed.  See :issue:`56`.



   .. py:method:: emergence_angle(angles: dict[str, float] | None = None) -> float

      Emergence angle (deg).

      Requires :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.surface_normal`
      to be set on the underlying geometry.

      PARAMETERS

      angles : dict[str, float] or None
          Motor angles in degrees keyed by real-axis name.  ``None``
          (default) means use the geometry's current angles.



   .. py:property:: extra_axis_names
      :type: list[str]


      Ordered list of input extra parameter names for the current mode.

      Drawn from the underlying mode's ``extras`` dict (filtered to the
      names the user is expected to supply: ``n_hat``, ``psi``,
      ``incidence``, ``emergence``, ``h2``, ``k2``, ``l2``) plus the
      scalar name of the active :class:`ReferenceConstraint` if it
      names one of those inputs and is not already listed.

      Solver-output placeholders (e.g. ``psi`` populated by the solver
      after :meth:`forward`) are also exposed as inputs so the user can
      change the target value before the next forward call.

      Returns ``[]`` for modes with no extras.


   .. py:property:: extras
      :type: dict[str, Any]


      Current values of the mode's extra parameters.

      To discover which geometry attribute the active mode requires,
      use ``solver._geom.required_reference_vector`` directly.


   .. py:method:: forward(pseudos: hklpy2.typing.NamedFloatDict) -> list[hklpy2.typing.NamedFloatDict]

      Compute motor positions from pseudo-axis values (hkl -> angles).



   .. py:method:: geometries() -> list[str]
      :classmethod:


      Ordered list of geometry names supported by this solver.



   .. py:method:: incidence_angle(angles: dict[str, float] | None = None) -> float

      Incidence angle (deg).

      Requires :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.surface_normal`
      to be set on the underlying geometry.

      PARAMETERS

      angles : dict[str, float] or None
          Motor angles in degrees keyed by real-axis name.  ``None``
          (default) means use the geometry's current angles.



   .. py:method:: inverse(reals: hklpy2.typing.NamedFloatDict) -> hklpy2.typing.NamedFloatDict

      Compute pseudo-axis values from motor positions (angles -> hkl).

      Works immediately after creation even before reflections are
      added: a default identity UB is used in that case.



   .. py:property:: lattice
      :type: hklpy2.typing.NamedFloatDict


      Crystal lattice parameters.


   .. py:property:: mode
      :type: str


      Current operating mode.


   .. py:property:: modes
      :type: list[str]


      List of operating modes for this geometry.


   .. py:attribute:: name
      :value: 'ad_hoc'


      Name of this Solver.


   .. py:method:: natural_psi(h: float, k: float, l: float) -> float | None

      Natural azimuthal angle ψ (deg) for reflection ``(h, k, l)`` from UB.

      Uses ``UB @ (h, k, l)`` and ``UB @ azimuth``; **no
      motor angles enter the calculation**.  Returns ``None`` when the
      reflection is parallel to the azimuth reference (ψ undefined).

      Requires :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.azimuth`
      to be set on the underlying geometry.



   .. py:method:: naz_angle(angles: dict[str, float] | None = None) -> float

      Lab-frame azimuthal angle of n̂, ``naz`` (deg).

      Requires :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.surface_normal`
      to be set on the underlying geometry.

      PARAMETERS

      angles : dict[str, float] or None
          Motor angles in degrees keyed by real-axis name.  ``None``
          (default) means use the geometry's current angles.



   .. py:method:: omega_pseudo(angles: dict[str, float] | None = None) -> float

      SPEC ``OMEGA`` pseudo-angle (deg), in ``[-90°, +90°]``.

      PARAMETERS

      angles : dict[str, float] or None
          Motor angles in degrees keyed by real-axis name.  ``None``
          (default) means use the geometry's current angles.



   .. py:property:: pseudo_axis_names
      :type: list[str]


      Ordered list of pseudo axis names.


   .. py:method:: psi_angle(angles: dict[str, float] | None = None) -> float

      Azimuthal angle ψ (deg) from motor positions.

      Requires :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.azimuth`
      to be set on the underlying geometry.

      PARAMETERS

      angles : dict[str, float] or None
          Motor angles in degrees keyed by real-axis name.  ``None``
          (default) means use the geometry's current angles.



   .. py:property:: real_axis_names
      :type: list[str]


      Ordered list of real axis names.


   .. py:method:: refineLattice(reflections: list[hklpy2.backends.typing.ReflectionDict]) -> hklpy2.typing.NamedFloatDict | None

      Refine lattice parameters from stored reflections.



   .. py:method:: removeAllReflections() -> None

      Remove all reflections.



   .. py:method:: set_reals(reals: hklpy2.typing.NamedFloatDict) -> None

      Set current real-axis values in the geometry object.

      Called by ``hklpy2.Core.forward()`` before :meth:`forward` to push
      current motor positions into the solver.



   .. py:method:: update_mode_constraints(mode_name: str | None = None, **updates: float | bool) -> None

      Override default values of one or more constraints on a mode.

      Each ``fixed_<axis>`` mode (e.g. ``fourcv`` ``fixed_chi``, ``psic``
      ``fixed_incidence_vertical``) carries a default scalar value baked
      into the geometry's YAML definition.  Constraint values are
      immutable; this method replaces the named mode's
      :class:`~ad_hoc_diffractometer.mode.ConstraintSet` with a fresh
      instance produced by
      :meth:`~ad_hoc_diffractometer.mode.ConstraintSet.with_constraint_values`,
      leaving constraint order, :attr:`computed`, :attr:`extras`, and
      :attr:`cut_points` unchanged.

      :param mode_name: Name of the mode to update.  ``None`` (default) operates on
                        the active mode (:attr:`mode`).
      :type mode_name: str, optional
      :param \*\*updates: Mapping of constraint name → new value, where each key matches
                          the ``.name`` attribute of an existing
                          :class:`~ad_hoc_diffractometer.mode.SampleConstraint`,
                          :class:`~ad_hoc_diffractometer.mode.DetectorConstraint`, or
                          :class:`~ad_hoc_diffractometer.mode.ReferenceConstraint` in
                          the mode.  Reference-constraint scalars (``psi``, ``incidence``,
                          ``emergence``) can also be updated through the per-call
                          :attr:`extras` setter; this method is the route for persistent
                          overrides of fixed-axis defaults.
      :type \*\*updates: float or bool

      :raises SolverError: If ``mode_name`` is unknown, if any kwarg names a constraint
          not present in the mode, or if a value cannot be converted to
          the expected numeric type.

      .. rubric:: Examples

      Override a single sample-stage default::

          solver.update_mode_constraints("fixed_chi", chi=45.0)

      Override several stages at once on a multi-fix mode::

          solver.update_mode_constraints(
              "fixed_incidence_fixed_chi_fixed_phi",
              chi=15.0, phi=30.0, incidence=5.0,
          )

      Operate on the currently active mode::

          solver.mode = "fixed_chi"
          solver.update_mode_constraints(chi=45.0)



   .. py:attribute:: version

      Version of this Solver.


   .. py:property:: wavelength
      :type: float | None


      Wavelength in Angstroms.


.. py:data:: DEFAULT_GEOMETRY
   :value: 'fourcv'


   Default geometry (Busing & Levy four-circle vertical).

.. py:data:: PSEUDO_AXES
   :value: ['h', 'k', 'l']


   Ordered pseudo axis names.

